<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="horizontal"
    android:padding="8dp">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/widget_min_spent_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">
            <FrameLayout android:layout_width="0dp" android:layout_height="12dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#333F7DD5" />
            <FrameLayout android:layout_width="0dp" android:layout_height="10dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33A96776" />
            <FrameLayout android:layout_width="0dp" android:layout_height="8dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33A96776" />
            <FrameLayout android:layout_width="0dp" android:layout_height="18dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33DD1414" />
            <FrameLayout android:layout_width="0dp" android:layout_height="12dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33A96776" />
            <FrameLayout android:layout_width="0dp" android:layout_height="24dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33DD1414" />
            <FrameLayout android:layout_width="0dp" android:layout_height="20dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33DD1414" />
            <FrameLayout android:layout_width="0dp" android:layout_height="10dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#333F7DD5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="14dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_min_max_spent_preview_min_amount" android:textColor="?android:attr/textColorPrimary" android:textSize="26sp" android:textStyle="bold" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minimum_spent" android:textColor="?android:attr/textColorSecondary" android:textSize="12sp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/widget_min_max_spent_preview_min_date" android:textColor="?android:attr/textColorSecondary" android:textSize="12sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="8dp"
        android:layout_height="1dp" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/widget_max_spent_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">
            <FrameLayout android:layout_width="0dp" android:layout_height="12dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33A96776" />
            <FrameLayout android:layout_width="0dp" android:layout_height="10dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33A96776" />
            <FrameLayout android:layout_width="0dp" android:layout_height="24dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33DD1414" />
            <FrameLayout android:layout_width="0dp" android:layout_height="18dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33A96776" />
            <FrameLayout android:layout_width="0dp" android:layout_height="36dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#99DD1414" />
            <FrameLayout android:layout_width="0dp" android:layout_height="22dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#33DD1414" />
            <FrameLayout android:layout_width="0dp" android:layout_height="12dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#333F7DD5" />
            <FrameLayout android:layout_width="0dp" android:layout_height="8dp" android:layout_marginHorizontal="2dp" android:layout_weight="1" android:background="#333F7DD5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="14dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_min_max_spent_preview_max_amount" android:textColor="?android:attr/textColorPrimary" android:textSize="26sp" android:textStyle="bold" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/maximum_spent" android:textColor="?android:attr/textColorSecondary" android:textSize="12sp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/widget_min_max_spent_preview_max_date" android:textColor="?android:attr/textColorSecondary" android:textSize="12sp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
